<resources>
    <string name="app_name">HelloWorld</string>
    <string name="calculate">CALCULATE</string>
    <string name="clear">Clear</string>
    <string name="i_agree">I agree</string>
    <string name="internet">Internet</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="byContinuing">By continuing, you accept the term of Use and Privacy Policy</string>
    <string name="skip">Skip</string>
    <string name="get_started">GET STARTED</string>
    <string name="welcome_to_clipzy">Welcome to Clipzy</string>
    <string name="clip_anything_from_over_100000_hot_topics">Clip anything from over 100,000 hot topics</string>
</resources>
