<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/logo" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/welcome_to_clipzy"
                android:textColor="@android:color/white"
                android:textSize="@dimen/tv_welcome" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tvWelcome"
                android:layout_alignRight="@id/tvWelcome"
                android:layout_below="@id/tvWelcome"
                android:gravity="center"
                android:text="@string/clip_anything_from_over_100000_hot_topics"
                android:textColor="@android:color/white"
                android:textSize="@dimen/tv_clip" />

        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/btn_getstarted_margin_buttom"
            android:background="@drawable/selector_btn_getstarted"
            android:padding="@dimen/btn_getstarted_padding"
            android:text="@string/get_started"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/btn_skip_margin_buttom"
            android:background="@android:color/transparent"
            android:text="@string/skip"
            style="@style/TextViewStyle.Green" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/textview_marginbotton"
            android:gravity="center"
            android:text="@string/byContinuing"
            style="@style/TextViewStyle" />

    </LinearLayout>

</RelativeLayout>